(fix) O3-5212 Remove the extra space from Immunizations Component

--- a/packages/esm-patient-chart-app/src/patient-chart/chart-review/dashboard-view.scss
+++ b/packages/esm-patient-chart-app/src/patient-chart/chart-review/dashboard-view.scss
@@ -12,6 +12,9 @@
   grid-auto-rows: auto;
   grid-gap: 1.3125rem;
   margin: 1.3125rem;
+  > :has([data-extension-id='immunization-detailed-history-card']:empty) {
+    display: none;
+  }
 }
 
 // See https://zpl.io/lrlmdq0 for the Visits dashboard design
